fixed line spacing

--- a/app/assets/stylesheets/bootstrapcustom.css.scss
+++ b/app/assets/stylesheets/bootstrapcustom.css.scss
@@ -93,7 +93,7 @@
 
 #paragraph p {
 	font-family: 'Droid Sans', sans-serif;
-	font-size: 1.02em;
+	font-size: 1.05em;
 }
 
 /* post view */ 
@@ -112,6 +112,10 @@
 
 #category:hover {
 	color: white;
+}
+
+p {
+	line-height: 1.63em;
 }
 
 
